[gd_scene load_steps=6 format=2]

[ext_resource path="res://game-assets/game-sprites/levels-sprites/test-zone-assets/tileset/chr011.png" type="Texture" id=1]
[ext_resource path="res://game-assets/game-scripts/general-scripts/falling-platform.gd" type="Script" id=2]
[ext_resource path="res://game-assets/game-scripts/general-scripts/falling-platform-container.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 40, 9 )

[node name="FallingPlatform" type="Node2D"]
script = ExtResource( 3 )

[node name="MainScreenSensor" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, 2.38419e-07 )
scale = Vector2( 4, 1.6 )

[node name="FallingPlatform" type="KinematicBody2D" parent="."]
motion/sync_to_physics = true
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="FallingPlatform"]
position = Vector2( -40, -16 )
texture = ExtResource( 1 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 80, 32 )

[node name="Shape" type="CollisionShape2D" parent="FallingPlatform"]
shape = SubResource( 1 )
one_way_collision = true

[node name="Area2D" type="Area2D" parent="FallingPlatform"]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="FallingPlatform/Area2D"]
position = Vector2( 0, -9 )
shape = SubResource( 2 )
one_way_collision = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="FallingPlatform"]
scale = Vector2( 4, 1.6 )

[connection signal="screen_entered" from="MainScreenSensor" to="." method="_on_MainScreenSensor_screen_entered"]
[connection signal="screen_exited" from="MainScreenSensor" to="." method="_on_MainScreenSensor_screen_exited"]
[connection signal="body_entered" from="FallingPlatform/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="FallingPlatform/Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="screen_exited" from="FallingPlatform/VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
